--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Samyam</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section id="main">
+        <div id="main_first">
+            <header id="header">
+                <h1 id="logo">Samyam</h1>
+                <nav id="navbar">
+                    <ul>
+                        <li><a href="#" class="navbar_links">About</a></li>
+                        <li><a href="#" class="navbar_links">Projects</a></li>
+                        <li><a href="#" class="navbar_links">Contacts</a></li>
+                    </ul>
+                </nav>
+                </ul>
+            </header>
+        </div>
+    </section>
+</body>
+</html>
