--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
                         <li><a href="#" class="navbar_links">Contacts</a></li>
                     </ul>
                 </nav>
-                </ul>
             </header>
+            <section id="intro">
+                <div id="intro_text">
+                <h1>Hey, I'm samyam</h1>
+                <p>I am just learning web developmen XD.</p>
+                </div>
+                <img src="#" alt="myphoto">
+            </section> 
         </div>
     </section>
 </body>
