--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
     <section id="main">
         <div id="main_first">
             <header id="header">
-                <h1 id="logo">Samyam</h1>
+                <h1 id="logo">Header Logo</h1>
                 <nav id="navbar">
                     <ul>
-                        <li><a href="#" class="navbar_links">About</a></li>
-                        <li><a href="#" class="navbar_links">Projects</a></li>
-                        <li><a href="#" class="navbar_links">Contacts</a></li>
+                        <li><a href="#" class="navbar_links">header link one</a></li>
+                        <li><a href="#" class="navbar_links">header link two</a></li>
+                        <li><a href="#" class="navbar_links">header link three</a></li>
                     </ul>
                 </nav>
             </header>
             <section id="intro">
                 <div id="intro_text">
-                <h1>Hey, I'm samyam</h1>
-                <p>I am just learning web developmen XD.</p>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <input type="button" id="intro_btn" value="Sign up">
                 </div>
-                <img src="#" alt="myphoto">
+                <img src="images/first.jpg" alt="myphoto" id="intro_img">
             </section> 
         </div>
     </section>
