--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                 <img src="images/first.jpg" alt="myphoto" id="intro_img">
             </section> 
         </div>
+        <div id="main_second">
+            <h1>Some random information</h1>
+            <div id="random">
+                
+            </div>
+        </div>
     </section>
 </body>
 </html>
