--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
         <div id="main_second">
             <h1>Some random information</h1>
             <div id="random">
-                
+                <div class="random_images">
+                    <img src="images/random1.jpg"><p>this is some subtext under an illustration or or image</p>
+                </div>
+                <div class="random_images">
+                    <img src="images/random2.jpeg"><p>this is some subtext under an illustration or or image</p>
+                </div>
+                <div class="random_images">
+                    <img src="images/random3.jpeg"><p>this is some subtext under an illustration or or image</p>
+                </div>
+                <div class="random_images">
+                    <img src="images/random4.jpg"><p>this is some subtext under an illustration or or image</p>
+                </div>
             </div>
         </div>
     </section>
