--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
                 </div>
             </div>
         </div>
+        <div id="main_third">
+            <h2>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod a itaque repudiandae aliquam, veniam necessitatibus odio animi, dignissimos facere accusamus culpa consequatur quisquam! Ea inventore a, illum cupiditate quis ad"</h2>
+            <h4>—Mr. Nobody</h4>
+        </div>
+        <div id="main_fourth">
+            <div id="fourth">
+                <div id="fourth_text">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <input type="button" value="Sign up" id="fourth_button">
+            </div>
+        </div>
+        <footer>
+            Copyright &copy The Odin Project 2021
+        </footer>
     </section>
 </body>
 </html>
